--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     // Navigation Components
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.2.1"
+    implementation "androidx.navigation:navigation-com.androiddevs.mvvmnewsapp.com.androiddevs.mvvmnewsapp.ui-ktx:2.2.1"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
